test-suite/typecheck/pass/mutual_recursion.first
function isEven(n: Int) -> Bool {
  return if (n == 0) { true } else if (n == 1) { false } else { isEven(n - 2) };
}
