test-suite/typecheck/fail/if_branch_type_mismatch.first
function f(n: Int) -> Int {
  return if (n > 0) { 1 } else { "zero" };
}
